firts steps  to create a cart

--- a/stepx/src/main/resources/templates/header.html
+++ b/stepx/src/main/resources/templates/header.html
@@ -232,6 +232,8 @@
               </svg>
             </a>
           </li>
+
+          <!--Cart button-->
           <li class="pe-3">
             <a href="#" data-bs-toggle="modal" data-bs-target="#modallong" class="border-0" onclick="openCartModal()">
               <svg class="shopping-cart" width="24" height="24">
@@ -239,7 +241,7 @@
               </svg>
             </a>
           </li>
-        
+        <!--/Cart Button-->
           
           <li>
             <a href="#" class="search-item border-0" data-bs-toggle="collapse" data-bs-target="#search-box" aria-label="Toggle navigation">
