--- a/stepx/src/main/resources/templates/create-product.html
+++ b/stepx/src/main/resources/templates/create-product.html
@@ -83,7 +83,7 @@
                     box-shadow: 0px 40px 100px rgba(73, 2, 2, 0.5); ">
 
                         <h2 class="text-center mb-4">Create Shoe Product</h2>
-                        <form id="edit-product-form" action="/shop/create" method="post" enctype="multipart/form-data">
+                        <form id="create-product-form" action="/shop/create" method="post" enctype="multipart/form-data">
                             <h5 class="widget-title text-decoration-underline pe-2">Shoe Information:</h5>
                             <div class="mb-3">
                                 <label for="name" class="form-label">Name</label>
