--- a/stepx/src/main/resources/templates/shop.html
+++ b/stepx/src/main/resources/templates/shop.html
@@ -143,7 +143,7 @@
                       
                   
                       <!--Edit Buttom-->
-                    <a href="/edit-product/{{id}}">
+                    <a href="/shop/edit/{{id}}">
                       <button type="button" class="btn btn-light">
                         <svg class="icon-pencil">
                           <use xlink:href="#icon-pencil"></use>
