--- a/stepx/src/main/resources/templates/partials/cart-confirmation-view.html
+++ b/stepx/src/main/resources/templates/partials/cart-confirmation-view.html
@@ -39,7 +39,7 @@
 
     {{^error}}
     <div class="container-button-confirmation">
-        <button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep" style=" display: block;margin: 0 auto;" onclick="AddtoCart('{{id}}')" value="1269">
+        <button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep" style=" display: block;margin: 0 auto;" onclick="AddtoCart('{{id}}','M',1,1)" value="1269">
             Add to cart
         </button>
     </div>
