--- a/stepx/src/main/resources/templates/partials/loadMoreShoe.html
+++ b/stepx/src/main/resources/templates/partials/loadMoreShoe.html
@@ -12,7 +12,7 @@
                       </svg>
                     </button>
                       <!--Edit Buttom-->
-                    <a href="/edit-product/{{id}}">
+                    <a href="/shop/edit/{{id}}">
                       <button type="button" class="btn btn-light">
                         <svg class="icon-pencil">
                           <use xlink:href="#icon-pencil"></use>
