--- a/stepx/src/main/resources/templates/header.html
+++ b/stepx/src/main/resources/templates/header.html
@@ -235,7 +235,7 @@
 
           <!--Cart button-->
           <li class="pe-3">
-            <a href="#" data-bs-toggle="modal" data-bs-target="#modallong" class="border-0" onclick="openCartModal()">
+            <a href="#" data-bs-toggle="modal" data-bs-target="#modaltoggle" class="border-0" onclick="openCartModal(1)"><!--aqui va el user_id para identificar el carrito-->
               <svg class="shopping-cart" width="24" height="24">
                 <use xlink:href="#shopping-cart"></use>
               </svg>
