header working in profile and cart in all pages

--- a/stepx/src/main/resources/templates/checkout.html
+++ b/stepx/src/main/resources/templates/checkout.html
@@ -160,6 +160,18 @@
     </div>
   </section>
 
+  <!-- quick view -->
+  <div class="modal fade" id="modaltoggle" aria-hidden="true" tabindex="-1">
+    <div class="modal-dialog modal-fullscreen-md-down modal-md modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-body" id="modal-body-content">
+  
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- / quick view -->
+
   {{>footer}}
 
   <script src="/js/jquery-1.11.0.min.js"></script>
