loading products in checkout

--- a/stepx/src/main/resources/templates/partials/quick-view-cart-modal.html
+++ b/stepx/src/main/resources/templates/partials/quick-view-cart-modal.html
@@ -40,6 +40,7 @@
     </div>
     {{/cartItems}}
   
+    
     <div class="mini-cart-total d-flex justify-content-between py-4">
       <span class="fs-6">Subtotal:</span>
       <span class="special-price-code">
@@ -53,7 +54,7 @@
     </div>
   
     <div class="modal-footer border-0 justify-content-center px-0">
-      <a href="/checkout" class="w-100">
+      <a href="/checkout/1" class="w-100">
         <button type="button" class="btn btn-outline-gray hvr-sweep-to-right dark-sweep w-100">
           Checkout
         </button>
