--- a/stepx/src/main/resources/templates/checkout.html
+++ b/stepx/src/main/resources/templates/checkout.html
@@ -89,8 +89,9 @@
                 <input type="tel" class="form-control ps-3 text-input" id="phone" placeholder="Enter your Phone Number"
                   required>
               </div>
-
-              <button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep w-100">Continue with Order</button>
+              
+              <button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep w-100"
+                onclick="DownloadTicket('{{id_orderShoe}}')">Continue with Order</button>
             </form>
           </div>
         </div>
