--- a/stepx/src/main/resources/templates/partials/quick-view-cart-modal.html
+++ b/stepx/src/main/resources/templates/partials/quick-view-cart-modal.html
@@ -47,6 +47,10 @@
     </span>
   </div>
 
+  {{#empty}}
+  {{/empty}}
+
+{{^empty}}
   <div class="modal-footer border-0 justify-content-center px-0">
     <a href="/checkout/1" class="w-100">
       <button type="button" class="btn btn-outline-gray hvr-sweep-to-right dark-sweep w-100">
@@ -54,4 +58,6 @@
       </button>
     </a>
   </div>
+{{/empty}}
+
 </div>
