--- a/stepx/src/main/resources/templates/partials/checkout-itemsList.html
+++ b/stepx/src/main/resources/templates/partials/checkout-itemsList.html
@@ -11,19 +11,22 @@
             <h5 class="mb-2">{{name}}</h5>
             <div class="d-flex justify-content-between align-items-center flex-wrap">
                 <div class="input-group product-qty">
-                    <button type="button" class="quantity-left-minus btn btn-light rounded-0 rounded-start btn-number"
-                        data-type="minus">
-                        <svg width="16" height="16">
+                    <button type="button"
+                          class="quantity-left-minus btn btn-light rounded-0 rounded-start btn-number"
+                          data-type="minus">
+                          <svg width="16" height="16">
                             <use xlink:href="#minus"></use>
-                        </svg>
-                    </button>
-                    <input type="text" name="quantity" class="form-control input-number quantity" value={{quantity}}>
-                    <button type="button" class="quantity-right-plus btn btn-light rounded-0 rounded-end btn-number"
-                        data-type="plus">
-                        <svg width="16" height="16">
+                          </svg>
+                        </button>
+
+                        <input type="text" name="quantity" class="form-control input-number quantity quantity-input"value={{quantity}}  data-id="{{id_orderItem}}">
+
+                        <button type="button" class="quantity-right-plus btn btn-light rounded-0 rounded-end btn-number"
+                          data-type="plus">
+                          <svg width="16" height="16">
                             <use xlink:href="#plus"></use>
-                        </svg>
-                    </button>
+                          </svg>
+                        </button>
                 </div>
                 <div class="price-wrapper mb-2">
                     <span class="fw-bold">{{price}}</span>
@@ -46,6 +49,10 @@
     </div>
     {{/cartItems}}
 </div>
+
+{{#setSubtotal}} 
+<button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep w-100" onclick="recalculate(1)">Recalculate</button>
+{{/setSubtotal}}
 <!-- total -->
 <div class="mt-4 pt-4 border-top">
     <div class="d-flex justify-content-between mb-2">
