--- a/stepx/src/main/resources/templates/partials/quick-view-cart-modal.html
+++ b/stepx/src/main/resources/templates/partials/quick-view-cart-modal.html
@@ -8,9 +8,7 @@
   <div class="mini-cart cart-list p-0 mt-3">
     <div class="mini-cart-item d-flex border-bottom pb-3">
       <div class="col-lg-2 col-md-3 col-sm-2 me-4">
-        <a href="#" title="product-image">
-          <img src="shop/{{id}}/image/1" class="img-fluid" alt="single-product-item">
-        </a>
+          <img src="/shop/{{id}}/image/1" class="img-fluid" alt="single-product-item">
       </div>
       <div class="col-lg-9 col-md-8 col-sm-8">
         <div class="product-header d-flex justify-content-between align-items-center mb-3">
@@ -34,18 +32,22 @@
   </div>
   {{/cartItems}}
 
-
+  {{#setSubtotal}}
   <div class="mini-cart-total d-flex justify-content-between py-4">
     <span class="fs-6">Subtotal:</span>
     <span class="special-price-code">
       <span class="price-amount amount fs-6" style="opacity: 1;">
         <bdi>
-          <span class="price-currency-symbol">$</span>{{#setSubtotal}} {{total}} {{/setSubtotal}}
-          {{^setSubtotal}}0{{/setSubtotal}}
+          <span class="price-currency-symbol">$</span> {{total}} 
+          
         </bdi>
       </span>
     </span>
   </div>
+  {{/setSubtotal}}
+
+  {{^setSubtotal}}
+  {{/setSubtotal}}
 
   {{#empty}}
   {{/empty}}
