--- a/stepx/src/main/resources/templates/checkout.html
+++ b/stepx/src/main/resources/templates/checkout.html
@@ -37,11 +37,11 @@
         <div class="col-lg-7 mb-4 mb-lg-0">
           <div class="login-form bg-light p-5">
             <h2 class="mb-4">Shipping Details</h2>
-            <form>
+            <form action = "/checkout/downloadTicket" method="POST">
               <!-- country -->
               <div class="mb-3">
                 <label for="country" class="form-label">Country</label>
-                <select class="form-control ps-3 text-input" id="country" required>
+                <select class="form-control ps-3 text-input" id="country" name="country" required>
                   <option value="">Select your country</option>
                   <option value="US">United States</option>
                   <option value="UK">United Kingdom</option>
@@ -55,43 +55,43 @@
                 <label class="form-label">Coupon</label>
                 <div class="input-group">
                   <input type="text" class="form-control ps-3 text-input" placeholder="Enter your coupon code">
-                  <button class="btn btn-red hvr-sweep-to-right dark-sweep" type="button">Apply</button>
+                  <button class="btn btn-red hvr-sweep-to-right dark-sweep" type="button" name="coupon">Apply</button>
                 </div>
               </div>
 
               <!-- personal information-->
               <div class="mb-3">
                 <label for="firstName" class="form-label">First Name</label>
-                <input type="text" class="form-control ps-3 text-input" id="firstName"
+                <input type="text" class="form-control ps-3 text-input" id="firstName" name="firstName"
                   placeholder="Enter your First Name" required>
               </div>
+              <input type="hidden" name="orderId" value="{{id_orderShoe}}">
 
               <div class="mb-3">
                 <label for="lastName" class="form-label">Second Name</label>
-                <input type="text" class="form-control ps-3 text-input" id="lastName"
+                <input type="text" class="form-control ps-3 text-input" id="lastName" name="lastName"
                   placeholder="Enter your Second Name" required>
               </div>
 
               <div class="mb-3">
                 <label for="email" class="form-label">Email Address</label>
-                <input type="email" class="form-control ps-3 text-input" id="email"
+                <input type="email" class="form-control ps-3 text-input" id="email" name="email"
                   placeholder="Enter your E-mail Address" required>
               </div>
 
               <div class="mb-3">
                 <label for="address" class="form-label">Address</label>
-                <input type="text" class="form-control ps-3 text-input" id="address" placeholder="Enter your Address"
+                <input type="text" class="form-control ps-3 text-input" id="address" name="address" placeholder="Enter your Address"
                   required>
               </div>
 
               <div class="mb-4">
                 <label for="phone" class="form-label">Phone Number</label>
-                <input type="tel" class="form-control ps-3 text-input" id="phone" placeholder="Enter your Phone Number"
+                <input type="tel" class="form-control ps-3 text-input" id="phone" name="phone" placeholder="Enter your Phone Number"
                   required>
               </div>
-              
-              <button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep w-100"
-                onclick="DownloadTicket('{{id_orderShoe}}')">Continue with Order</button>
+
+              <button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep w-100">Continue with Order</button>
             </form>
           </div>
         </div>
