generate a pdf order

--- a/stepx/src/main/resources/templates/checkout.html
+++ b/stepx/src/main/resources/templates/checkout.html
@@ -54,8 +54,8 @@
               <div class="mb-4 coupon-section">
                 <label class="form-label">Coupon</label>
                 <div class="input-group">
-                  <input type="text" class="form-control ps-3 text-input" placeholder="Enter your coupon code">
-                  <button class="btn btn-red hvr-sweep-to-right dark-sweep" type="button" name="coupon">Apply</button>
+                  <input type="text" name="coupon" class="form-control ps-3 text-input" placeholder="Enter your coupon code">
+                  <button class="btn btn-red hvr-sweep-to-right dark-sweep" type="button" >Apply</button>
                 </div>
               </div>
 
