--- a/stepx/src/main/resources/templates/partials/checkout-itemsList.html
+++ b/stepx/src/main/resources/templates/partials/checkout-itemsList.html
@@ -11,22 +11,29 @@
             <h5 class="mb-2">{{name}}</h5>
             <div class="d-flex justify-content-between align-items-center flex-wrap">
                 <div class="input-group product-qty">
+                    {{#stock}}
                     <button type="button"
-                          class="quantity-left-minus btn btn-light rounded-0 rounded-start btn-number"
-                          data-type="minus">
-                          <svg width="16" height="16">
-                            <use xlink:href="#minus"></use>
-                          </svg>
-                        </button>
+                      class="quantity-left-minus btn btn-light rounded-0 rounded-start btn-number"
+                      data-type="minus">
+                      <svg width="16" height="16">
+                        <use xlink:href="#minus"></use>
+                      </svg>
+                    </button>
+        
+                    <input type="text" name="quantity" class="form-control input-number quantity quantity-input"value={{quantity}}  data-id="{{id_orderItem}}">
 
-                        <input type="text" name="quantity" class="form-control input-number quantity quantity-input"value={{quantity}}  data-id="{{id_orderItem}}">
+                    <button type="button" class="quantity-right-plus btn btn-light rounded-0 rounded-end btn-number"
+                      data-type="plus">
+                      <svg width="16" height="16">
+                        <use xlink:href="#plus"></use>
+                      </svg>
+                    </button>
+                    {{/stock}}
 
-                        <button type="button" class="quantity-right-plus btn btn-light rounded-0 rounded-end btn-number"
-                          data-type="plus">
-                          <svg width="16" height="16">
-                            <use xlink:href="#plus"></use>
-                          </svg>
-                        </button>
+                    {{^stock}}
+                    <p>No stock available</p>
+                    <input type="hidden" name="quantity" class="form-control input-number quantity quantity-input" value=0 data-id="{{id_orderItem}}">
+                    {{/stock}}
                 </div>
                 <div class="price-wrapper mb-2">
                     <span class="fw-bold">{{price}}</span>
