--- a/stepx/src/main/resources/templates/header.html
+++ b/stepx/src/main/resources/templates/header.html
@@ -218,6 +218,8 @@
       </div>
       <div class="user-items ps-0 ps-md-5">
         <ul class="d-flex justify-content-end list-unstyled align-item-center m-0">
+         
+          <!--Solo se muestra el panel a los administradores-->
           {{#admin}}
           <li class="pe-3">
             <a href="/admin-pannel" class="border-0">
@@ -227,6 +229,8 @@
             </a>
             </li>
             {{/admin}}
+            <!--Login que lleva al profile si esta autenticado o al login si no-->
+          {{^isAuthenticated}}
             <li class="pe-3">
               <a href="login" data-bs-toggle="modal" data-bs-target="#modallogin" class="border-0">
                 <svg class="user" width="24" height="24">
@@ -234,7 +238,17 @@
                 </svg>
               </a>
             </li>
-            
+            {{/isAuthenticated}}
+            {{#isAuthenticated}}
+            <li class="pe-3">
+              <a href="/profile"  class="border-0">
+                <svg class="user" width="24" height="24">
+                  <use xlink:href="#user"></use>
+                </svg>
+              </a>
+            </li>
+            {{/isAuthenticated}}
+
           {{#isAuthenticated}}
           {{^admin}}
           <!--Cart button-->
