CSRFSecuriry and Icons for roles in shop

--- a/stepx/src/main/resources/templates/create-product.html
+++ b/stepx/src/main/resources/templates/create-product.html
@@ -51,6 +51,7 @@
                                             <a href="#">Forgot your password?</a>
                                         </p>
                                     </div>
+                                    <input type="hidden" name="_csrf" value="{{token}}"/>
                                 </form>
                             </div>
                         </div>
