--- a/stepx/src/main/resources/templates/edit-product.html
+++ b/stepx/src/main/resources/templates/edit-product.html
@@ -117,6 +117,7 @@
                                 <button type="button"
                                     class="btn btn-outline-gray hvr-sweep-to-right dark-sweep">Cancel</button>
                             </div>
+                            <input type="hidden" name="_csrf" value="{{token}}"/>
                         </form>
                     </div>
                 </div>
