--- a/stepx/src/main/resources/templates/header.html
+++ b/stepx/src/main/resources/templates/header.html
@@ -116,6 +116,7 @@
       <svg class="search">
         <use xlink:href="#search"></use>
       </svg>
+      <input type="hidden" name="_csrf" value="{{token}}"/>
     </form>
   </div>
 </div>
@@ -156,6 +157,7 @@
                     <a href="#">Forgot your password?</a>
                   </p>
                 </div>
+                <input type="hidden" name="_csrf" value="{{token}}"/>
               </form>
             </div>
           </div>
