--- a/stepx/src/main/resources/templates/register-user.html
+++ b/stepx/src/main/resources/templates/register-user.html
@@ -69,6 +69,7 @@
                   <button type="button" class="btn btn-outline-gray hvr-sweep-to-right dark-sweep" style="width: 100%;">Cancel</button>
                 </a>
               </div>
+              <input type="hidden" name="_csrf" value="{{token}}"/>
             </form>
           </div>
         </div>
