--- a/stepx/src/main/resources/templates/single-product.html
+++ b/stepx/src/main/resources/templates/single-product.html
@@ -236,6 +236,7 @@
                   <button type="submit" name="submit"
                     class="btn btn-dark btn-large text-uppercase w-100">Submit</button>
                 </form>
+                <input type="hidden" name="_csrf" value="{{token}}"/>
               </div>
             </div>
           </div>
