--- a/stepx/src/main/resources/templates/checkout.html
+++ b/stepx/src/main/resources/templates/checkout.html
@@ -92,6 +92,7 @@
               </div>
 
               <button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep w-100">Continue with Order</button>
+              <input type="hidden" name="_csrf" value="{{token}}"/>
             </form>
           </div>
         </div>
