--- a/stepx/src/main/resources/templates/partials/deleteShoeModal.html
+++ b/stepx/src/main/resources/templates/partials/deleteShoeModal.html
@@ -16,5 +16,6 @@
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
           <button type="submit" class="btn btn-danger">Delete</button>
         </form>
+        <input type="hidden" name="_csrf" value="{{token}}"/>
       </div>
 {{/product}}
