--- a/stepx/src/main/resources/templates/editelementsv2.html
+++ b/stepx/src/main/resources/templates/editelementsv2.html
@@ -631,10 +631,10 @@
   <section id="selling-product" class="single-product py-2 my-2 py-md-5 my-md-5">
     <div class="container">
         <div class="row g-5">
-            <!-- Primera fila: Imágenes y carrusel -->
+            <!-- First row: Images and carrusel -->
             <div class="col-12">
                 <div class="row">
-                    <!-- Columna de miniaturas -->
+                    <!-- thumbnail Column -->
                     <div class="col-lg-2" id="small-pictures-column">
                         <div class="swiper product-thumbnail-slider" style="max-height: 100%; min-height: 100%">
                             <div class="swiper-wrapper">
@@ -656,9 +656,9 @@
                             </div>
                         </div>
                     </div>
-                    <!-- /Columna de miniaturas -->
+                    <!-- /thumbnail Column  -->
 
-                    <!-- Columna del carrusel -->
+                    <!-- carrousel row -->
                     <div class="col-lg-10">
                         <div class="swiper product-large-slider">
                             <div class="swiper-wrapper">
@@ -691,12 +691,12 @@
                             <div class="swiper-pagination"></div>
                         </div>
                     </div>
-                    <!-- /Columna del carrusel -->
+                    <!-- /Carrousel row -->
                 </div>
             </div>
-            <!-- /Primera fila -->
+            <!-- /First row -->
 
-            <!-- Segunda fila: Formulario -->
+            <!-- Second row: Form -->
             <div class="col-12">
                 <div class="product-info">
                     <form id="edit-product-form">
