--- a/stepx/src/main/resources/templates/header.html
+++ b/stepx/src/main/resources/templates/header.html
@@ -126,9 +126,9 @@
   <div class="modal-dialog modal-fullscreen-md-down modal-md modal-dialog-centered">
     <div class="modal-content" id="cart-modal-body">
       
-      <!--aqui se debe hacer el inner.html de cart-quick-view-->
+      <!--here it starts the inner.html from cart-quick-view-->
       
-      <!--aqui se terminar de hacer el inner.html de cart-quick-view-->
+      <!--Here it ends the inner HTML from cart view -->
     </div>
   </div>
 </div>
@@ -231,7 +231,7 @@
             </a>
             </li>
             {{/admin}}
-            <!--Login que lleva al profile si esta autenticado o al login si no-->
+            <!--Login that leads to /profile if is authenticated or to login if is not -->
           {{^isAuthenticated}}
             <li class="pe-3">
               <a href="login" data-bs-toggle="modal" data-bs-target="#modallogin" class="border-0">
