--- a/stepx/src/main/resources/templates/partials/checkout-itemsList.html
+++ b/stepx/src/main/resources/templates/partials/checkout-itemsList.html
@@ -38,7 +38,7 @@
                 <div class="price-wrapper mb-2">
                     <span class="fw-bold">{{price}}</span>
                 </div>
-                <!--boton de eliminar producto en checkout-->
+                <!--delete product button in checkout-->
                 <button class="btn btn-link text-danger p-0 mb-2" onclick="deleteItemfromCart('{{id_orderItem}}','1')">
                     <svg class="close" width="16" height="16">
                         <use xlink:href="#close"></use>
